# openenv-code-reviewer

./: .env.example  .gitignore  DEPLOY_INSTRUCTIONS.md  Dockerfile  README.md  cleanup_hf.py  deploy_to_hf.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.bat  run_all.bat  update_all.bat
.github/workflows/: test.yml
code-review-env/: .gitignore  Dockerfile  README.md  dump_json.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_sandbox.py
code-review-env/dataset/: easy_bugs.json  hard_bugs.json  medium_bugs.json
code-review-env/server/: agent.py  app.py  battle_runner.py  constants.py  custom_api.py  grader.py  main.py  models.py  sandbox.py
code-review-env/server/tasks/: easy.py  hard.py  medium.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  AppContext.jsx  index.css
dashboard/src/components/: Sidebar.jsx
dashboard/src/pages/: ApiDocs.jsx  Battle.jsx  DiffViewer.jsx  LabAudit.jsx  Leaderboard.jsx  LiveMonitor.jsx  Replay.jsx  Scoring.jsx  Settings.jsx  TaskExplorer.jsx
server/: app.py
tests/: test_api.py  test_grader.py
