[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "1.0.0"
description = "OpenEnv environment for AI-powered code review and bug detection"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "your-name" }]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic>=2.11,<3",
  "openai>=1.30.1,<2",
  "openenv-core",
  "httpx==0.27.0",
  "python-multipart==0.0.9",
  "requests>=2.31,<3",
]

[project.scripts]
server = "server.app:main"
