[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "OpenEnv environment for AI-powered code review and bug detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "websockets==12.0",
]

[tool.openenv]
name = "code-review-env"
version = "1.0.0"
entry_point = "server.main:app"
inference_script = "inference.py"
tasks = ["easy", "medium", "hard"]
